--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
 
 	<div class="footer-copyright py-4">
 		<div class="container">
-			tag-unblocked.github.io			<span class="dsb-panel">
+			Tag Unblocked		<span class="dsb-panel">
 				<a href="term.html">Term</a> - <a href="dmca.html">DMCA</a> - <a href="policy.html">Policy</a>			</span>
 		</div>
 	</div>
